--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.4",
     "react-redux": "^8.1.2",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.15.0"
